--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;600&family=Poppins:wght@400;600&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -8,4 +10,8 @@ html,
 body,
 #root {
   height: 100%;
+}
+
+body {
+  font-family: "Ibarra Real Nova", serif;
 }
