--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,30 @@
 
 .main {
   grid-area: 2 / 1 / 3 / 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.main .main-inner-wrapper {
+  max-width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.main .video {
+  width: 100%;
+  height: 100%;
+  border: 1px solid hsl(0deg 0% 80%);
+}
+
+.main .last-picture {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  inset: 0;
+  opacity: 0.5;
 }
 
 .sidebar {
@@ -60,6 +84,23 @@
   scrollbar-gutter: stable;
   overflow: hidden;
   overflow-y: auto;
+  padding: 1rem;
+}
+
+.sidebar .frames {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.sidebar .frame {
+  display: flex;
+}
+
+.sidebar .frame img {
+  width: 100%;
+  border: 1px solid hsl(0deg 0% 80%);
 }
 
 .toolbar {
