--- a/src/App.css
+++ b/src/App.css
@@ -30,19 +30,24 @@
   max-width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .main .video {
   width: 100%;
-  height: 100%;
   border: 1px solid hsl(0deg 0% 80%);
+}
+
+.main .last-picture-canvas {
+  position: absolute;
+  opacity: 0;
 }
 
 .main .last-picture {
   position: absolute;
   width: 100%;
-  height: 100%;
-  inset: 0;
   opacity: 0.5;
 }
 
