--- a/src/Frame.css
+++ b/src/Frame.css
@@ -1,21 +1,42 @@
-.frames .frame {
+.frame {
   display: flex;
   position: relative;
   background-color: hsl(0deg 0% 50%);
 }
 
-.frames .frame button {
+.frame .toolbar-shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 2.5rem;
+  background: linear-gradient(
+    0deg,
+    rgba(255 255 255 / 0%) 0%,
+    rgba(0 0 0 / 60%) 100%
+  );
+  z-index: 1;
   opacity: 0;
   transition: opacity 0.15s;
 }
 
-.frames .frame:hover button,
-.frames .frame:active button,
-.frames .frame button:focus-visible {
+.frame:hover .toolbar-shadow,
+.frame:active .toolbar-shadow,
+.frame.selected .toolbar-shadow {
   opacity: 1;
 }
 
-.frames .frame button.select {
+.frame button {
+  opacity: 0;
+  transition: opacity 0.15s;
+}
+
+.frame:hover button,
+.frame:active button {
+  opacity: 1;
+}
+
+.frame button.select {
   position: absolute;
   inset: 0;
   width: 100%;
@@ -23,10 +44,10 @@
   background-color: transparent;
   border: 0;
   cursor: pointer;
-  z-index: 1;
+  z-index: 2;
 }
 
-.frames .frame button.select .icon {
+.frame button.select .icon {
   position: absolute;
   top: 0;
   left: 0;
@@ -34,20 +55,16 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 48px;
-  height: 48px;
+  width: 2.5rem;
+  height: 2.5rem;
   color: white;
 }
 
-.frames .frame.selected button.select {
+.frame.selected button.select {
   opacity: 1;
 }
 
-.frames .frame.selected button.select .icon {
-  color: #1e88e5;
-}
-
-.frames .frame button.delete {
+.frame button.delete {
   position: absolute;
   top: 0;
   right: 0;
@@ -60,20 +77,20 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 2;
+  z-index: 3;
   color: white;
 }
 
-.frames .frame button.delete:disabled {
+.frame button.delete:disabled {
   opacity: 0;
   pointer-events: none;
 }
 
-.frames .frame img {
+.frame img {
   width: 100%;
   transition: transform 0.15s;
 }
 
-.frames .frame.selected img {
+.frame.selected img {
   transform: scale(0.95);
 }
